tests/asm/error/label_error_5_space_inside_args.s
.name "zork"
.comment "I'M ]ALIIIIVE"


dog:	and %2 1, 1, r1

live:	live %2

liv: live %1
